// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Show Toast 1`] = `
Array [
  Object {
    "payload": Array [
      Object {
        "key": "l9ipe44gmphh5c6her",
        "message": "Please try again later",
        "title": "Something went wrong",
        "variant": "danger",
      },
    ],
    "type": "SHOW_TOAST",
  },
  Object {
    "payload": Array [
      Object {
        "key": "l9ipe44pc1hk7g81kjh",
        "message": "",
        "title": "Logged in successfully!",
        "variant": "success",
      },
    ],
    "type": "SHOW_TOAST",
  },
]
`;

exports[`Show showFailureToast 1`] = `
Array [
  Object {
    "payload": Array [
      Object {
        "key": "l9ipe44gmphh5c6her",
        "message": "Please try again later",
        "title": "Something went wrong",
        "variant": "danger",
      },
    ],
    "type": "SHOW_TOAST",
  },
]
`;
